add output for ManagementFactoryTest